nav link update

--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,13 @@
                         Language
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Java</a>
-                        <a class="dropdown-item" href="#">JavaScript</a>
+                        <a class="dropdown-item" href="https://www.javatpoint.com/java-tutorial">Java</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">C++</a>
-                        <a class="dropdown-item" href="#">HTML</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/js/">JavaScript</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/cpp/default.asp">C++</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">HTML</a>
                     </div>
                 </li>
                 <li class="nav-item active">
