--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,13 @@
                         Language
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="https://www.javatpoint.com/java-tutorial">Java</a>
+                        <a class="dropdown-item" href="https://www.javatpoint.com/java-tutorial" target="_blank">Java</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://www.w3schools.com/js/">JavaScript</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/js/" target="_blank">JavaScript</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://www.w3schools.com/cpp/default.asp">C++</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/cpp/default.asp" target="_blank">C++</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">HTML</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp" target="_blank">HTML</a>
                     </div>
                 </li>
                 <li class="nav-item active">
